--- a/style.css
+++ b/style.css
@@ -1,46 +1,79 @@
 *,
 *::after,
 *::before {
-   box-sizing: border-box;
-
-   margin: 0;
-   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-   font-size: 10px;
+  font-size: 10px;
+  font-family: 'Roboto Slab', serif;
 }
 
 img {
-   max-width: 100%;
-   display: block;
+  max-width: 100%;
+  display: block;
 }
 
+.pageTitle {
+  font-size: 3rem;
+  margin-top: 3rem;
+}
 
+.site__content {
+  margin: 0 auto;
+}
 
+.board {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  padding-top: 4rem;
+  border: 1px solid red;
+}
 
-
-
+.board__box {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+}
 
 /* Footer */
 .site {
-   display: flex;
-   min-height: 100vh;
-   flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.site-content {
-   flex: 1;
+.site__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
-.footer-link {
-   display: block;
-   width: 50px;
-   margin: 1rem;
-   transition: transform 0.2s ease-in-out;
+.footer__link {
+  display: block;
+  width: 50px;
+  margin: 1rem;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
-.footer-link:hover {
-   cursor: pointer;
-   transform: scale(1.1);
+.footer__link:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
+/*# sourceMappingURL=style.css.map */
