--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ img {
 
 .pageTitle {
   font-size: 3rem;
-  margin-top: 3rem;
+  text-align: center;
+  margin: 3rem 0;
 }
 
 .site__content {
@@ -33,14 +34,23 @@ img {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[3];
       grid-template-rows: repeat(3, 1fr);
-  padding-top: 4rem;
-  border: 1px solid red;
 }
 
 .board__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100px;
   height: 100px;
+  font-size: 2rem;
   text-align: center;
+  border: 1px solid red;
 }
 
 /* Footer */
