--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,8 @@ img {
 // Typography
 .pageTitle {
    font-size: 3rem;
-   margin-top: 3rem;
+   text-align: center;
+   margin: 3rem 0;
 }
 
 
@@ -40,14 +41,20 @@ img {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
 
-   padding-top: 4rem;
-   border: 1px solid red;
+  
 
    &__box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
       width: 100px;
       height: 100px;
 
+      font-size: 2rem;
       text-align: center;
+
+      border: 1px solid red;
    }
 }
 
