--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ img {
 }
 
 .pageTitle {
+  margin: 5rem 0;
   font-size: 3rem;
   text-align: center;
-  margin: 3rem 0;
+  color: #06111C;
 }
 
 .site__content {
@@ -34,6 +35,7 @@ img {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[3];
       grid-template-rows: repeat(3, 1fr);
+  margin-bottom: 5rem;
 }
 
 .board__box {
@@ -50,7 +52,56 @@ img {
   height: 100px;
   font-size: 2rem;
   text-align: center;
-  border: 1px solid red;
+  -webkit-transition: background-color 0.25s ease-in-out;
+  transition: background-color 0.25s ease-in-out;
+}
+
+.board__box:hover {
+  cursor: pointer;
+  background-color: #e6e6e6;
+}
+
+.border-right {
+  border-right: 1px solid #06111C;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #06111C;
+}
+
+.btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.btn {
+  padding: 1rem 2rem;
+  min-width: 200px;
+  margin-bottom: 1.25rem;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #BB2020;
+  background-color: #e6e6e6;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.btn:hover {
+  color: #fff;
+  background-color: #BB2020;
 }
 
 /* Footer */
