--- a/style.css
+++ b/style.css
@@ -17,24 +17,81 @@ img {
   display: block;
 }
 
-.pageTitle {
-  margin: 5rem 0;
-  font-size: 3rem;
+.page-title,
+.winner__title {
   text-align: center;
   color: #06111C;
 }
 
+.page-title {
+  margin: 5rem 0;
+  font-size: 3rem;
+}
+
+.winner__title {
+  margin: 3rem 0;
+  font-size: 2.5rem;
+}
+
+.winner__name {
+  color: #BB2020;
+  font-weight: 1000;
+}
+
 .site__content {
-  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.winner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0;
+  background-color: #fff;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.winner--display {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.winner--display-fade {
+  opacity: 1;
 }
 
 .board {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (1fr)[3];
-      grid-template-rows: repeat(3, 1fr);
+  -ms-grid-columns: (100px)[3];
+      grid-template-columns: repeat(3, 100px);
+  -ms-grid-rows: (100px)[3];
+      grid-template-rows: repeat(3, 100px);
+  margin: 0 auto;
   margin-bottom: 5rem;
 }
 
@@ -48,15 +105,13 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100px;
-  height: 100px;
   font-size: 2rem;
   text-align: center;
   -webkit-transition: background-color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out;
 }
 
-.board__box:hover {
+.board__box--hover:hover {
   cursor: pointer;
   background-color: #e6e6e6;
 }
@@ -87,7 +142,7 @@ img {
 
 .btn {
   padding: 1rem 2rem;
-  min-width: 200px;
+  width: 200px;
   margin-bottom: 1.25rem;
   text-align: center;
   text-decoration: none;
